<resources>
    <string name="app_name">TadaimaOtakuStore</string>
    <string name="title_activity_home_screen">HomeScreenActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Hello, User!</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_trade">Trade</string>
    <string name="menu_marketplace">Marketplace</string>
    <string name="menu_categories">Categories</string>
    <string name="menu_featured">Featured</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_wishlist">Wishlist</string>
    <string name="menu_cart">Cart</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_bottom_navigation">BottomNavigationActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_side_navigation_drawer">SideNavigationDrawerActivity</string>
    <string name="user_name_format">%1$s %2$s</string>
</resources>