<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/nav_gallery"
        android:icon="@drawable/ic_menu_gallery"
        android:title="@string/menu_gallery" />
    <item
        android:id="@+id/nav_slideshow"
        android:icon="@drawable/ic_menu_slideshow"
        android:title="@string/menu_slideshow" />
    <item
        android:id="@+id/nav_categories"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/menu_categories" />
    <item
        android:id="@+id/nav_cart"
        android:icon="@drawable/ic_shopping_cart"
        android:title="Shopping Cart" />
    <item
        android:id="@+id/nav_wishlist"
        android:icon="@android:drawable/btn_star"
        android:title="Wishlist" />

</menu>